--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,8 @@ body{
     display: grid;
     margin: 1rem;
     grid-template-columns: repeat(4, 1fr);
-    width: 1000px;
-    height: 1000px;
+    /* width: 1000px;
+    height: 1000px; */
     gap: 1rem;
     padding: 1rem;
 }
@@ -80,5 +80,18 @@ body{
 .table{
     background-color: var(--light);
     border: 3px solid var(--dark);
-    border-radius: 1rem;
+    border-radius: 2rem;
+ display: flex;
+ justify-content: center;
+ width: 175px;
+ height: 175px;
+ 
+}
+
+img{
+  object-fit:cover;
+    width: 100%;
+   height: 100% ;
+   border-radius: 1rem;
+   margin: auto;
 }
